syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.gruzilkin.common";

package metastorage;

message FileSaveRequest {
  repeated string blockIds = 1;
  string fileName = 2;
}

message FileSaveResponse {
  int64 fileId = 1;
}

message FileReadRequest {
  int64 fileId = 1;
}

message FileReadResponse {
  repeated string blockIds = 1;
  string fileName = 2;
}

service MetaStorageService {
  rpc save(FileSaveRequest) returns (FileSaveResponse);
  rpc read(FileReadRequest) returns (FileReadResponse);
}